--- a/resources/assets/sass/frontend.scss
+++ b/resources/assets/sass/frontend.scss
@@ -1,8 +1,48 @@
+//RESET CSS
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+//END RESET CSS
+
 //Owl Carousel
-#main-banner{
+#main-banner {
   overflow: hidden;
   padding: 0;
 }
+
 #slider {
   .item {
     background: #0c83e7;
@@ -12,7 +52,7 @@
     -moz-border-radius: 3px;
     border-radius: 3px;
     text-align: center;
-    img{
+    img {
       display: block;
       width: 100%;
       max-height: 450px;
@@ -20,6 +60,7 @@
     }
   }
 }
+
 .owl-theme {
   .owl-nav {
     /*default owl-theme theme reset .disabled:hover links */
@@ -32,6 +73,7 @@
 
   }
 }
+
 //arrows on first carousel
 #slider.owl-theme {
   position: relative;
@@ -51,7 +93,7 @@
     background-color: rgba(0, 0, 0, .2);
     font-size: 30px;
   }
-  .owl-prev{
+  .owl-prev {
     left: -35px;
     text-indent: 14px;
   }
@@ -60,4 +102,5 @@
     text-indent: -14px;
   }
 }
+
 //End Owl Carousel
