--- a/resources/assets/sass/frontend.scss
+++ b/resources/assets/sass/frontend.scss
@@ -1,109 +1,1 @@
-//RESET CSS
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after, q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-//END RESET CSS
-
-//Owl Carousel
-#main-banner {
-  overflow: hidden;
-  padding: 0;
-  width:100%;
-}
-
-#slider {
-  .item {
-    background: #0c83e7;
-    margin: 0px;
-    color: #FFF;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    text-align: center;
-    img {
-      display: block;
-      width: 100%;
-      max-height: 450px;
-      min-height: 160px;
-    }
-  }
-}
-
-.owl-theme {
-  .owl-nav {
-    /*default owl-theme theme reset .disabled:hover links */
-    [class*='owl-'] {
-      transition: all .3s ease;
-      &.disabled:hover {
-        background-color: #D6D6D6;
-      }
-    }
-
-  }
-}
-
-//arrows on first carousel
-#slider.owl-theme {
-  margin-top: 53px;////////////////Cái Thằng Này Là Do Menu1 nó đang ở chế độ relative nên 2 thằng đè nhau, nhịn 1 tý
-  position: relative;
-  z-index: -1;
-  .owl-next, .owl-prev {
-    margin-top: -20px;
-    position: absolute;
-    top: 50%;
-    height: 70px;
-    width: 70px;
-    line-height: 70px;
-    text-align: center;
-    border-radius: 100px;
-    z-index: 5;
-    -webkit-transition: background-color .4s;
-    transition: background-color .4s;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .2);
-    font-size: 30px;
-  }
-  .owl-prev {
-    left: -35px;
-    text-indent: 14px;
-  }
-  .owl-next {
-    right: -35px;
-    text-indent: -14px;
-  }
-}
-
-//End Owl Carousel
+@import "reset";
