--- a/resources/assets/sass/frontend.scss
+++ b/resources/assets/sass/frontend.scss
@@ -1,5 +1,6 @@
 @import "reset";
-@import "menu-blur";
+@import "m-menu-blur";
+@import "m-category";
 #searchInput{
   width: 100%;
   margin-bottom: 5px;
