--- a/resources/assets/sass/frontend.scss
+++ b/resources/assets/sass/frontend.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "m-menu-blur";
 @import "m-category";
+@import "menu1";
 #searchInput{
   width: 100%;
   margin-bottom: 5px;
