--- a/resources/assets/sass/frontend.scss
+++ b/resources/assets/sass/frontend.scss
@@ -2,6 +2,9 @@
 @import "m-menu-blur";
 @import "m-category";
 @import "menu1";
+@import "slider1";
+@import "module1";
+@import "module2";
 #searchInput{
   width: 100%;
   margin-bottom: 5px;
