--- a/resources/assets/sass/menu1.scss
+++ b/resources/assets/sass/menu1.scss
@@ -69,6 +69,7 @@
   background: rgba(234, 237, 240, .8);
   box-shadow: 0 0 4px rgba(0, 0, 0, .4);
   height: 52px;
+  z-index: 999;
   .header-menu {
     padding: 0;
     margin: 0;
