--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -1,7 +1,8 @@
 @import "reset";
 @import "m-menu-blur";
 @import "m-category";
-@import "menu1";
+//@import "menu1";
+@import "menu2";
 @import "slider1";
 @import "module1";
 @import "module2";
