--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -6,6 +6,9 @@
 @import "slider1";
 @import "module1";
 @import "module2";
+@import "module3";
+@import "module4";
+@import "module5";
 #searchInput{
   width: 100%;
   margin-bottom: 5px;
