--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -9,6 +9,7 @@
 @import "module3";
 @import "module4";
 @import "module5";
+@import "footer1";
 #searchInput{
   width: 100%;
   margin-bottom: 5px;
