--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -9,6 +9,9 @@
 @import "module3";
 @import "module4";
 @import "module5";
+@import "module6";
+@import "module7";
+@import "module8";
 @import "footer1";
 #searchInput{
   width: 100%;
