--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -12,6 +12,9 @@
 @import "module6";
 @import "module7";
 @import "module8";
+@import "module9";
+@import "module10";
+@import "module11";
 @import "footer1";
 #searchInput{
   width: 100%;
