--- a/local/resources/assets/sass/reset.scss
+++ b/local/resources/assets/sass/reset.scss
@@ -10,3 +10,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 a, a:hover{
   text-decoration: none;
 }
+ol, ul {
+  list-style: none;
+}
