--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -15,6 +15,7 @@
 @import "module9";
 @import "module10";
 @import "module11";
+@import "module12";
 @import "footer1";
 #searchInput{
   width: 100%;
