--- a/local/resources/assets/sass/module12.scss
+++ b/local/resources/assets/sass/module12.scss
@@ -67,6 +67,14 @@
         left: -5px;
         top: 20%;
       }
+      .errorEmail,.errorName,.errorInfo{
+        display: none;
+        color: red;
+        animation: blinker 1s linear 3;
+      }
+      @keyframes blinker {
+        50% { opacity: 0; }
+      }
     }
   }
 }
