--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -16,6 +16,8 @@
 @import "module10";
 @import "module11";
 @import "module12";
+@import "contact1";
+@import "news1";
 @import "footer1";
 #searchInput{
   width: 100%;
