--- a/local/resources/assets/sass/m-menu-blur.scss
+++ b/local/resources/assets/sass/m-menu-blur.scss
@@ -106,9 +106,9 @@
   background-position: center center;
   background-color: #1ba8ff;
 }
-#wrap-container{
-  margin-top: 80px;
-}
+//#wrap-container{
+//  margin-top: 80px;
+//}
 
 .footer a {
   color: #17a689;
