--- a/css/frontend.css
+++ b/css/frontend.css
@@ -38,6 +38,8 @@ ol, ul {
   height: 100%;
   width: 260px;
   background: white;
+  -webkit-transition: left 0.3s ease, -webkit-box-shadow 0.3s ease 0.2s;
+  -webkit-transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   box-shadow: 0.5em 0 0 0 #1ba8ff, 0.6em 0 0 0 #1ba8ff;
 }
@@ -120,10 +122,6 @@ ol, ul {
   background-color: #1ba8ff;
 }
 
-#wrap-container {
-  margin-top: 80px;
-}
-
 .footer a {
   color: #17a689;
 }
@@ -134,6 +132,7 @@ This class is added to the container
 (#blurMe) when the sidebar is open.
 -----------------------------------*/
 .blurred {
+  -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
   -webkit-filter: blur(10px);
           filter: blur(10px);
@@ -756,6 +755,7 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
+  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -973,6 +973,7 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
+  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -1297,6 +1298,7 @@ This class is added to the container
   background: #103754;
   cursor: pointer;
   border-radius: 3px;
+  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
 }
 
@@ -1607,6 +1609,7 @@ This class is added to the container
   color: white;
   font-weight: 700;
   border-radius: 3px;
+  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
   width: 100%;
   background-color: #f1773d;
@@ -1653,6 +1656,59 @@ This class is added to the container
   }
 }
 
+.contact1 {
+  width: 100%;
+  height: 600px;
+  background-image: url(../images/test/page_contact.jpg) !important;
+  position: static;
+  background-size: cover;
+  background-position: 50% 0;
+  overflow: hidden;
+  margin-bottom: 0px !important;
+  padding-top: 137px !important;
+  padding-bottom: 113px !important;
+  display: table;
+}
+
+.contact1 h1 {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  line-height: normal;
+  font-size: 69px;
+  font-weight: 700;
+  color: white;
+}
+
+.news1 img {
+  width: 100%;
+  height: 100%;
+}
+
+.news1 h1 {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  line-height: normal;
+  font-size: 69px;
+  font-weight: 700;
+  color: white;
+}
+
+.news-content .wrap-one-news {
+  border: 1px solid #eee;
+  padding: 15px;
+  margin-bottom: 30px;
+  float: left;
+  width: 100%;
+}
+
+.news-content .wrap-one-news img {
+  width: 100%;
+  height: 200px;
+  padding-right: 15px;
+}
+
 .footer1 {
   background-color: floralwhite;
   position: relative;
@@ -1681,6 +1737,7 @@ This class is added to the container
 .footer1 .footer__jumpTop > a .fa {
   color: #00afef;
   padding-top: 10px;
+  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
