--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -18,6 +18,7 @@
 @import "module12";
 @import "contact1";
 @import "news1";
+@import "pagespeedinsight";
 @import "footer1";
 #searchInput{
   width: 100%;
