--- a/css/frontend.css
+++ b/css/frontend.css
@@ -38,8 +38,6 @@ ol, ul {
   height: 100%;
   width: 260px;
   background: white;
-  -webkit-transition: left 0.3s ease, -webkit-box-shadow 0.3s ease 0.2s;
-  -webkit-transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   box-shadow: 0.5em 0 0 0 #1ba8ff, 0.6em 0 0 0 #1ba8ff;
 }
@@ -132,7 +130,6 @@ This class is added to the container
 (#blurMe) when the sidebar is open.
 -----------------------------------*/
 .blurred {
-  -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
   -webkit-filter: blur(10px);
           filter: blur(10px);
@@ -755,7 +752,6 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
-  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -973,7 +969,6 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
-  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -1298,7 +1293,6 @@ This class is added to the container
   background: #103754;
   cursor: pointer;
   border-radius: 3px;
-  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
 }
 
@@ -1609,7 +1603,6 @@ This class is added to the container
   color: white;
   font-weight: 700;
   border-radius: 3px;
-  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
   width: 100%;
   background-color: #f1773d;
@@ -1709,6 +1702,16 @@ This class is added to the container
   padding-right: 15px;
 }
 
+#exTab2 h3 {
+  color: white;
+  background-color: #428bca;
+  padding: 5px 15px;
+}
+
+.tab-content {
+  margin-top: 20px;
+}
+
 .footer1 {
   background-color: floralwhite;
   position: relative;
@@ -1737,7 +1740,6 @@ This class is added to the container
 .footer1 .footer__jumpTop > a .fa {
   color: #00afef;
   padding-top: 10px;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
