--- a/css/frontend.css
+++ b/css/frontend.css
@@ -38,6 +38,8 @@ ol, ul {
   height: 100%;
   width: 260px;
   background: white;
+  -webkit-transition: left 0.3s ease, -webkit-box-shadow 0.3s ease 0.2s;
+  -webkit-transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   transition: left 0.3s ease, box-shadow 0.3s ease 0.2s;
   box-shadow: 0.5em 0 0 0 #1ba8ff, 0.6em 0 0 0 #1ba8ff;
 }
@@ -130,6 +132,7 @@ This class is added to the container
 (#blurMe) when the sidebar is open.
 -----------------------------------*/
 .blurred {
+  -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
   -webkit-filter: blur(10px);
           filter: blur(10px);
@@ -752,6 +755,7 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
+  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -969,6 +973,7 @@ This class is added to the container
   top: -7px;
   left: -7px;
   padding: 7px;
+  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: opacity 0.2s, -webkit-transform 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
@@ -1293,6 +1298,7 @@ This class is added to the container
   background: #103754;
   cursor: pointer;
   border-radius: 3px;
+  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
 }
 
@@ -1603,6 +1609,7 @@ This class is added to the container
   color: white;
   font-weight: 700;
   border-radius: 3px;
+  -webkit-transition: all 300ms linear 0ms;
   transition: all 300ms linear 0ms;
   width: 100%;
   background-color: #f1773d;
@@ -1708,8 +1715,166 @@ This class is added to the container
   padding: 5px 15px;
 }
 
-.tab-content {
-  margin-top: 20px;
+.result-analytic-info {
+  padding: 20px;
+}
+
+.result-analytic-image {
+  padding: 20px;
+  border-left: 1px solid #ddd;
+}
+
+.screenshot {
+  height: 510px;
+  margin-top: 30px;
+  position: relative;
+  width: 250px;
+}
+
+.screenshot.mobile {
+  background: url(../images/test/n4_225-400.png) no-repeat;
+}
+
+.screenshot.desktop {
+  background: url(../images/test/pixel.png) no-repeat;
+  height: 250px;
+}
+
+.screenshot.mobile .screenshot-img-container {
+  width: 225px;
+  height: 400px;
+  clip: rect(0, 225px, 400px, 0);
+  top: 54px;
+  left: 12px;
+  right: 13px;
+}
+
+.screenshot-img-container {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.screenshot-img-container img {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.result-group-title {
+  font-weight: normal;
+  margin: 24px 0 16px -10px;
+  padding: 0 10px;
+}
+
+.result-group-title .result-group-title-card {
+  background: #f0f0f0;
+  padding: 10px 16px;
+  display: inline-block;
+}
+
+.result-group-title .result-group-title-card .poor {
+  color: #dd4b39;
+}
+
+.result-group-title .result-group-title-card .needswork {
+  color: #fda100;
+}
+
+.result-group-title .result-group-title-card .good {
+  color: #009a2d;
+}
+
+.result-group-title .result-group-title-card .result-group-title-card-mark {
+  font-size: 30px;
+  font-weight: bolder;
+  margin: 0;
+  padding: 0;
+}
+
+.result-group-title .result-group-title-card .result-group-title-card-score {
+  font-size: 15px;
+  text-align: center;
+  color: #999;
+  margin: 0;
+  padding: 0;
+}
+
+.result-group-title .result-group-title-message {
+  color: #212121;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.screenshot.desktop .screenshot-img-container {
+  width: 180px;
+  height: 112px;
+  clip: rect(0, 180px, 112px, 0);
+  top: 45px;
+  left: 32px;
+}
+
+.result-group-title .result-group-title-card .needswork {
+  color: #fda100;
+}
+
+.result-tabs .ranking {
+  color: #fff;
+  display: inline-block;
+  font-size: 13px;
+  vertical-align: top;
+}
+
+.result-tabs .ranking .icon {
+  display: inline-block;
+  margin: 0 6px;
+  position: relative;
+  top: -6px;
+}
+
+.result-tabs .tab-title {
+  display: inline;
+  padding: 0 8px;
+}
+
+.SPRITE_mobile_needswork {
+  background: no-repeat url(../images/test/sprite.png) -82px -31px;
+  width: 18px;
+  height: 34px;
+}
+
+.SPRITE_mobile_poor {
+  background: no-repeat url(../images/test/sprite.png) -18px -31px;
+  width: 18px;
+  height: 34px;
+}
+
+.SPRITE_mobile_good {
+  background: no-repeat url(../images/test/sprite.png) 0 -31px;
+  width: 18px;
+  height: 34px;
+}
+
+.SPRITE_desktop_good {
+  background: no-repeat url(../images/test/sprite.png) -46px 0;
+  width: 46px;
+  height: 31px;
+}
+
+.SPRITE_desktop_needswork {
+  background: no-repeat url(../images/test/sprite.png) 0 0;
+  width: 46px;
+  height: 31px;
+}
+
+.SPRITE_desktop_poor {
+  background: no-repeat url(../images/test/sprite.png) -36px -31px;
+  width: 46px;
+  height: 31px;
 }
 
 .footer1 {
@@ -1740,6 +1905,7 @@ This class is added to the container
 .footer1 .footer__jumpTop > a .fa {
   color: #00afef;
   padding-top: 10px;
+  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
@@ -1832,4 +1998,8 @@ This class is added to the container
 #searchInput {
   width: 100%;
   margin-bottom: 5px;
+}
+
+body {
+  line-height: 1.6;
 }
